Sticky navbar et autre

--- a/mymovieslist/vue/css/maCss.css
+++ b/mymovieslist/vue/css/maCss.css
@@ -30,4 +30,10 @@
     border-left: none;
     border-right: none;
     border-radius: 0rem;
+    margin-top: 4rem!important;
+}
+
+h1, .titre
+{
+    margin-top: 4rem!important;
 }
