--- a/mymovieslist/vue/css/maCss.css
+++ b/mymovieslist/vue/css/maCss.css
@@ -1,3 +1,8 @@
+/*  Auteur       : De Sousa Kevin
+    Nom          : MyMoviesList
+    Date         : 14 Juin 2017
+    Style personnelle
+*/
 
 .page-link
 {
